<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/imageAluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher" 
            android:contentDescription="@string/foto"/>

        <TextView
            android:id="@+id/textNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/editNome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
			android:inputType="text">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone" />

        <EditText
            android:id="@+id/editTelefone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
			android:inputType="text">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereco" />
        <EditText
            android:id="@+id/editEndereco"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
			android:inputType="text">

            <requestFocus />
        </EditText>
        
        
        <TextView
            android:id="@+id/textSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site" />
        <EditText
            android:id="@+id/editSite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
			android:inputType="text">

            <requestFocus />
        </EditText>
    
        <TextView
            android:id="@+id/textNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nota" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonInserir"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/inserir" />
        
    </LinearLayout>

</ScrollView>